--- a/client/controlpanel/allgroups.html
+++ b/client/controlpanel/allgroups.html
@@ -90,7 +90,8 @@ xhr.send();
                                 <br/>
                             </li>
                             <li><br/></li>
-                            <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button><a href="#" id="groupName2">Unholy Plants</a>
+                            <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button>
+                                <a href="#" id="groupName2">Unholy Plants</a></li>
 
                                 <ul class="plantList">
 
