FML2: The awakening

--- a/client/controlpanel/allgroups.html
+++ b/client/controlpanel/allgroups.html
@@ -91,7 +91,7 @@ xhr.send();
                             </li>
                             <li><br/></li>
                             <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button>
-                                <a href="#" id="groupName2">Unholy Plants</a></li>
+                                <a href="#" id="groupName2">Unholy Plants</a>
 
                                 <ul class="plantList">
 
