--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -90,13 +90,13 @@ function doWork() {
 
                                             <!--Dank Weed-->
                                             <li><ul class="nav innerMenu"><li><button id="setting_cog" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
-                                             &#8203</button><a href="#">&nbsp;Dank Weed, 90%THC, strong stuff&nbsp;</a></li>
+                                             <!----></button><a href="#">&nbsp;Dank Weed, 90%THC, strong stuff&nbsp;</a></li>
                                             </ul></li>
 
                                             <!--Mystery Plant-->
                                             <li><ul class="nav innerMenu"><li>
                                                 <button data-toggle="collapse" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;
-                                                  &#8203</button><a href="#">Mystery Plant</a></li>
+                                                  <!----></button><a href="#">Mystery Plant</a></li>
                                             </ul></li>
                                         </ul>
                                 </li>
