--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -49,54 +49,54 @@
 				<br/>
 				<form action="/associate-device" method="post" id="pi_info">
 					<div class="subsection">
-						<p>PlantPi Infomation</p>
+						<p>Add a PlantPi Device</p>
 					</div>
 					<div class="subform">
 						<div class="form-group">
-						 	<label for="PlantName">Plant Name</label>
+						 	<label for="PlantName">New Plant Name</label>
 						    <input type="text" class="form-control" id="PlantName" name="name" placeholder="Maple"/>
 						 </div>
 						 <div class="form-group">
-						   	<label for="Pi_Device_ID">PlantPi Device ID</label>
+						   	<label for="Pi_Device_ID">New PlantPi Device ID</label>
 						   	<input type="text" class="form-control" id="Pi_Device_ID" name="device" placeholder="A113"/>
 						</div>
-						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
+						<button id="savebutton" type="submit" class="btn btn-success" onclick="confirm_mes()">Add Plant</button>
 						<br/>
 					</div>
 				</form>
 				<form action="#" method="post">
 					<div class="subsection">
-						<br/>
-						<p>Account Infomation</p>
+						<br />
+                        <hr />
+						<p>Update Account Infomation</p>
 					</div>
 					<div class="subform">
-                        <p>Email Infomation</p>
                         <div class="form-group">
                             <label for="email-address">Email Address</label>
                             <input type="text" class="form-control" id="email_address" placeholder="plantpi_is_awesome27@gmail.com"/>
                         </div>
+                        <button id="submitemail" type="submit" class="btn btn-primary" onclick="confirm_mes()">Update Email</button>
+                        <br />
                     </div>
-                    <button id="submitemail" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
+
                 </form>
+                <hr />
                 <form action="#" method="post">
-                    <hr/>
                     <div class="subsection">
-                        <p>Password Infomation</p>
+                        <p>Change Password</p>
                     </div>
-                    <div class="form-group">
+                    <div class="container form-group">
 					    	<label for="cur_password">Current Password</label>
 					    	<input type="text" class="form-control" id="cur_password" placeholder=""/>
-					</div>
-					<div class="form-group">
-					    	<label for="new_password">New Password</label>
-					    	<input type="text" class="form-control" id="new_password" placeholder=""/>
-					</div>
-					<div class="form-group">
-					    	<label for="verify_password">Verify Password</label>
+                            <label for="new_password">New Password</label>
+                            <input type="text" class="form-control" id="new_password" placeholder=""/>
+                            <label for="verify_password">Retype New Password</label>
 					    	<input type="text" class="form-control" id="verify_password" placeholder=""/>
 					</div>
-					<button id="submitpassword" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
-                    <br/>
+                    <div class="container">
+                        <button id="submitpassword" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save New Password</button>
+                    </div>
+                    <br />
 				</form>
 				<br/>
 			</div>
