commented out require in dashboard.js

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -187,11 +187,7 @@ function doWork() {
                         <div id="groupsListContainer"></div>
 
                             <div id="show_create_group" style="display: none;">
-                                <form action="/create-group" method="post">
-                                    <input type="hidden" value=username name="user" id="uname" />
-                                    <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
-                                    <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
-                                </form>
+                                &nbsp;
                             </div>
                         <hr/>
 
