--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -327,7 +327,7 @@ else{
                 </div>
             </div><!-- End stage and sidebar-->
         </div>
-        <script src="dist/bundle.js"></script>
+        <script src="dist/dashboard.js"></script>
         <script>
 $(document).ready(function() {
     $("#cog1").click(function () {
