fixing more react errors on dashboard

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -111,7 +111,7 @@ function doWork() {
                                 <li>
                                     <ul class="nav innerMenu">
                                         <li>
-                                            <button id="cog1" class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"><!----></button>
+                                            <button id="cog1" onClick="" class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"><!----></button>
                                             <script>
                                                 $(document).ready(function() {
                                                     $("#cog1").click(function () {
@@ -133,7 +133,7 @@ function doWork() {
                                     <!--Mystery Plant-->
                                     <ul class="nav innerMenu">
                                         <li>
-                                            <button id="cog2" type="button" onclick="" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"><!----></button>
+                                            <button id="cog2" type="button" onclick="" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&#8203;</button>
                                             <a href="#">Library sidewalk</a>
                                         </li>
 
