--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -82,15 +82,13 @@ function doWork() {
                     </ul>
 
 
+
+
                         <ul class="nav" id="groupsList">
-                            <div id="groupsListContainer">&nbsp;</div>
-                            <li style="font-size:12px; float:right;"><br/><a href="allgroups.html">Manage Groups</a></li>
-                            <li class="plus" style="font-size:13px; float:left;"><a onClick="showElement('show_create_group')"}><span class="btn glyphicon glyphicon-plus"><!----></span></a></li>
+                            <span id="groupsListContainer">&nbsp;</span>
+                            
                         </ul>
 
-                        <div id="show_create_group" style="display: none;">
-                            &nbsp;
-                        </div>
 
                         <hr/>
 
