second round: John vs. Linter

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -84,9 +84,8 @@ function doWork() {
 
 
 
-                        <ul class="nav" id="groupsList">
-                            <span id="groupsListContainer">&nbsp;</span>
-                            
+                        <ul class="nav" id="groupsListContainer">
+
                         </ul>
 
 
