fixed plant listings, Linter Round: 1

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -93,19 +93,15 @@ function doWork() {
 
                         <ul class="nav" style="font-size: 15px;">
                             <li>
-                                <h4 style="color: #009b09;">All:</h4>
+                                <h4 style="color: #009b09;">Ungrouped Plants:</h4>
                             </li>
-                            <li><div id="plantListContainer"></div></li>
+                        </ul>
+                        <ul class="nav"  id="plantListContainer">
 
-                            <li>
-                                <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"><!----></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
-                                <br/>
-                            </li>
 
-                            <li style="font-size: 12px; float: right;"><a href="allplants.html">All Plants</a>
-                            <br/>
-                            <br/>
-                            </li>
+                        </ul>
+                        <ul class="nav">
+                            <li style="font-size: 12px; float: right;"><a href="allplants.html">All Plants</a><br/><br/><br/></li>
                         </ul>
                 </div>
             </div>
