fix stage style and add some react stuff

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -73,13 +73,16 @@ function doWork() {
         <!--..............Begin sidebar and stage......................-->
         <div class="flexContainer">
             <div id="sidebar" class="sidebar-offcanvas" style="">
-                <div onclick="window.location='#groups'" class="navButton">
-                    Groups
-                </div>
-                <div onclick="window.location='#'" class="navButton">
-                    Plants
-                </div>
-                <div style="position: absolute; bottom: 0">Legal info goes here</div>
+                <nav>
+                    <div onclick="window.location='#groups'" class="navButton">
+                        Groups
+                    </div>
+                    <div onclick="window.location='#'" class="navButton">
+                        Plants
+                    </div>
+
+                </nav>
+                <div style="align-self: flex-end; vertical-align: bottom; ">Legal info goes here</div>
             </div>
 
             <!--...........................................................................Side bar ends here..........................................................................-->
