fixed device id handling

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -63,7 +63,7 @@ function doWork() {
                         <li><a><span id="usernameRenderTarget" class="glyphicon glyphicon-user"></span></a></li>
 
                         <li><a href="settings.html"><span class="glyphicon glyphicon-cog">&nbsp;</span>Settings</a></li>
-                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
+                        <li><a href="/a/index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
                         <li><a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a></li>
                     </ul>
                 </div>
